# loggerizer

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
.devcontainer/: .dockerignore  devcontainer.json  docker-compose.yml
config/: __init__.py  smtp_config.py
enums/: __init__.py  file_extension_enum.py  file_mode_enum.py  log_field.py  log_level_enum.py  time_rotations_interval_enum.py
formatters/: __init__.py  base_formatter.py  default_formatter.py  json_formatter.py
handlers/: file_handler.py  smtp_handler.py  stream_handler.py  time_rotating_file_handler.py
loggerizer/: Dockerfile  __init__.py  main.py
loggerizer/config/: __init__.py  smtp_config.py
loggerizer/enums/: __init__.py  file_extension_enum.py  file_mode_enum.py  log_level_enum.py
loggerizer/filters/: __init__.py  info_filter.py
loggerizer/formatters/: __init__.py  base_formatter.py  default_formatter.py  json_formatter.py
loggerizer/handlers/: __init__.py  file_handler.py  null_handler.py  rotating_file_handler.py  smtp_handler.py  time_rotating_file_handler.py
loggerizer/loggers/: __init__.py  logger_builder.py  logger_factory.py
loggers/: logger_builder.py  logger_factory.py
tests/: test_config.py  test_enums.py  test_formatters.py  test_handlers.py  test_logger_builder.py  test_logger_factory.py
